# fastapi-backend

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile-pro  README.md  docker-compose.yaml  main.py  pyproject.toml
configs/: .env.dev  .env.local  .env.prod  .env.test  .secrets.example
ddl/: 1.0.0.sql
dml/: 1.0.0.sql
docs/: auth_module_guide.md  dataclass_use_guide.md  doc.md  md_use_guide.md  third_party_login_guide.md  uv_guide.md  uv_use_guide.md
internal/: __init__.py  app.py  config.py
internal/aps_tasks/: __init__.py  tasks.py
internal/cache/: AGENTS.md  __init__.py  auth.py  redis.py
internal/celery_tasks/: __init__.py  tasks.py
internal/config/: __init__.py  load_config.py  loader.py  setting.py  settings.py
internal/constants/: __init__.py
internal/controllers/: AGENTS.md
internal/controllers/api/: __init__.py  auth.py  user.py
internal/controllers/internal/: __init__.py  user.py
internal/controllers/internalapi/: __init__.py  user.py
internal/controllers/public/: __init__.py  otel_demo.py  test.py
internal/controllers/publicapi/: __init__.py  test.py
internal/controllers/serviceapi/: user.py
internal/controllers/web/: __init__.py  user.py
internal/core/: AGENTS.md  __init__.py  auth.py  auth_token.py  crypto.py  errors.py  exception.py  logger.py  signature.py  snowflake.py
internal/dao/: AGENTS.md  __init__.py  cache.py  redis.py  third_party_account.py  user.py
internal/dtos/: __init__.py  user.py
internal/embedings/: __init__.py
internal/infra/: AGENTS.md  __init__.py  anyio_task.py  apscheduler.py  celery.py  celery_db_session.py  database.py  default_db_session.py  default_redis.py  gprc.py  otel.py  redis.py  redis_session.py  storage.py
internal/infra/apscheduler/: __init__.py  initialization.py  register.py  scheduler.py
internal/infra/celery/: __init__.py  initialization.py  register.py  scheduler.py  tasks.py
internal/infra/database/: __init__.py  connection.py
internal/infra/redis/: __init__.py  connection.py  dao.py
internal/infra/vector/: __init__.py
internal/middleware/: auth.py  recorder.py
internal/middlewares/: AGENTS.md  __init__.py  auth.py  recorder.py
internal/models/: AGENTS.md  __init__.py  third_party_account.py  user.py
internal/schemas/: AGENTS.md  __init__.py  user.py
internal/services/: AGENTS.md  auth.py  user.py
internal/tasks/: AGENTS.md  __init__.py  celery_tasks.py  demo_task.py  scheduler.py  task_handlers.py
internal/tasks/apscheduler/: tasks.py
internal/tasks/celery/: tasks.py
internal/utils/: AGENTS.md  __init__.py  anyio_task.py  cache.py  cache_helpers.py  crypto.py  exception.py  gprc.py  oss.py  password.py  signature.py  snowflake.py  stream.py
internal/utils/apscheduler/: __init__.py  register.py  tasks.py
internal/utils/celery/: __init__.py  tasks.py
internal/utils/redis/: __init__.py  dao.py
internal/utils/types/: __init__.py
pkg/: AGENTS.md  __init__.py  anyio_file.py  anyio_file_tool.py  anyio_task.py  anyio_task_manager.py  aps_task.py  aps_task_manager.py  async_apscheduler.py  async_cache.py  async_celery.py  async_context.py  async_database.py  async_grpc.py  async_hasher.py  async_http_cli.py  async_logger.py  async_openai.py  async_stream_time_control.py  bcrypt.py  cache.py  celery_task.py  celery_task_manager.py  context_tool.py  crypto.py  ctx.py  database.py  grpc.py  httpx.py  httpx_tool.py  jwt.py  logger_tool.py  loguru_logger.py  openai_client.py  orm_tool.py  oss_storage.py  resp_tool.py  response.py  signature.py  signature_tool.py  (+5 more)
pkg/async_database/: base.py  builder.py  dao.py
pkg/cache/: client.py
pkg/cache_tool/: client.py  tool.py  types.py
pkg/chars_matcher/: AGENTS.md  __init__.py  matcher.py  pinyin_chars_matcher.py  shape_chars_matcher.py  types.py  validation.py
pkg/chars_matcher/chars/: chars.json  surname_chars.json
pkg/chars_matcher/scripts/: __init__.py  rebuild_chars_matcher_pinyin_mappings.py
pkg/context/: __init__.py  base.py  ctx.py  manager.py
pkg/crypter/: AGENTS.md  __init__.py  aes.py
pkg/crypto/: __init__.py  aes.py  base.py
pkg/database/: AGENTS.md  __init__.py  base.py  builder.py  dao.py  types.py
pkg/decorators/: AGENTS.md  __init__.py
pkg/logger/: AGENTS.md  __init__.py  handler.py  span.py
pkg/orm/: base.py  builder.py  dao.py  database.py  model_mixin.py  types.py
pkg/orm_tool/: builder.py  model_mixin.py
pkg/oss/: AGENTS.md  __init__.py  aliyun.py  base.py  s3.py
pkg/third_party_auth/: AGENTS.md  __init__.py  base.py  config.py  factory.py
pkg/third_party_auth/strategies/: __init__.py  wechat.py
pkg/toolkit/: AGENTS.md  apscheduler.py  async_task.py  cache.py  celery.py  config.py  config_loader.py  context.py  dict.py  exc.py  file.py  float.py  grpc.py  hasher.py  http_cli.py  inter.py  json.py  jwt.py  list.py  logger.py  middleware.py  openai_cli.py  otel.py  redis_client.py  response.py  signature.py  smart_types.py  string.py  time.py  timer.py  types.py
pkg/vector/: __init__.py  capabilities.py  contracts.py  errors.py
pkg/vectors/: AGENTS.md  __init__.py  context_assembly.py  contracts.py  errors.py  post_retrieval.py
pkg/zvec_vector/: README.md  __init__.py  base.py
scripts/: run_celery_worker.py  run_celery_worker.sh
tests/: AGENTS.md  __init__.py  conftest.py  test_anyio_file.py  test_anyio_task.py  test_bcrypt.py  test_celery_tasks.py  test_context.py  test_crypto.py  test_http_cli.py  test_json_response.py  test_json_type.py  test_jwt.py  test_logger.py  test_logger_json_content.py  test_logger_rotation.py  test_openai_client.py  test_orm.py  test_smart_types.py
tests/api/: test_auth.py
tests/logger/: test_logger.py  test_logger_json_content.py  test_logger_json_or_text.py  test_logger_rotation.py  test_middleware_span.py  test_span.py
tests/orm/: test_orm.py  test_orm_json_type.py
tests/toolkit/: test_context.py  test_crypto.py  test_jwt.py  test_smart_types.py
tests/vector/: conftest.py  test_context_assembly.py  test_post_retrieval.py
tests/zvec_vector/: __init__.py  test_base.py
(+154 files in other folders)
