[project]
name = "fastapi-backend"
version = "0.1.0"
description = "fastapi-backend"
readme = "README.md"
requires-python = ">=3.12"

# 生产运行时依赖：只保留真正业务需要 import 的模块
dependencies = [
    "fastapi",
    "uvicorn",
    "starlette>0.49.1",
    "pydantic",
    "annotated-types",
    "anyio>=4.10.0",
    "httpx",
    "h11",
    "httpcore",
    "idna",
    "SQLAlchemy",
    "aiomysql>0.3.0",
    "PyMySQL",
    "numpy",
    "pandas",
    "celery",
    "APScheduler",
    "amqp",
    "kombu",
    "billiard",
    "vine",
    "celery-types",
    "redis",
    "loguru",
    "PyJWT",
    "bcrypt",
    "python-dotenv",
    "shortuuid",
    "snowflake-id",
    "openai",
    "orjson",
    "tqdm",
    "jiter",
    "protobuf",
    "grpcio",
    "grpcio-tools",
    "certifi",
    "click",
    "packaging",
    "python-dateutil",
    "pytz",
    "tzdata",
    "tzlocal",
    "typing-extensions",
    "typing-inspection",
    "xxhash",
    "uvloop>=0.22.1; sys_platform != 'win32'",
    "httptools",
    "async-lru>=2.0.5",
    "celery-redbeat>=2.3.3",
    "trio>=0.32.0",
]

# 分组依赖 —— 开发环境才需要
[dependency-groups]
dev = [
    # 构建工具也放入 dev，方便本地 build（但生产以 build-system 为准）
    "pip>=25.3",
    "setuptools>=79.0.1",
    "wheel>=0.45.1",
    # 常规开发工具（可根据你需要继续添加）
    "pytest",
    "pytest-asyncio",
    "httpx", # 测试请求常用
    "black",
    "ruff",
    "mypy",
    "types-redis",
    "types-pytz",
    "pandas-stubs>=2.3.3.251201",
]

# CI 构建相关工具（可选，按需添加）
build = [
    "build", # python -m build
    "twine", # 上传包（如果你发包）
]

[build-system]
requires = [
    "setuptools>=79.0.1",
    "wheel>=0.45.1",
]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false
default-groups = []

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
python-downloads = false

[tool.ruff]
target-version = "py312"            # 根据你的 Python 版本改
line-length = 120
exclude = ["venv", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]       # 基础错误 + isort + bugbear 等
ignore = ["E203", "W503"]           # 常见的和 Black/格式化冲突的规则
