[project]
name = "fastapi-backend"
version = "0.1.0"
description = "fastapi-backend"
readme = "README.md"
requires-python = ">=3.12"

# 生产运行时依赖：只保留真正业务需要 import 的模块
dependencies = [
    "fastapi",
    "uvicorn",
    "starlette>0.49.1",
    "pydantic",
    "annotated-types",
    "anyio>=4.10.0",
    "httpx",
    "h11",
    "httpcore",
    "idna",
    "SQLAlchemy",
    "aiomysql>0.3.0",
    "PyMySQL",
    "numpy",
    "pandas",
    "celery",
    "APScheduler",
    "amqp",
    "kombu",
    "billiard",
    "vine",
    "celery-types",
    "redis",
    "loguru",
    "PyJWT",
    "bcrypt",
    "python-dotenv",
    "shortuuid",
    "snowflake-id",
    "openai",
    "orjson",
    "tqdm",
    "jiter",
    "protobuf",
    "grpcio",
    "grpcio-tools",
    "certifi",
    "click",
    "packaging",
    "python-dateutil",
    "pytz",
    "tzdata",
    "tzlocal",
    "typing-extensions",
    "typing-inspection",
    "xxhash",
    "uvloop>=0.22.1; sys_platform != 'win32'",
    "httptools",
    "async-lru>=2.0.5",
    "celery-redbeat>=2.3.3",
    "trio>=0.32.0",
    "pydantic-settings>=2.12.0",
    "cryptography>=46.0.3",
]

# 分组依赖 —— 开发环境才需要
[dependency-groups]
dev = [
    # 构建工具也放入 dev，方便本地 build（但生产以 build-system 为准）
    "pip>=25.3",
    "setuptools>=79.0.1",
    "wheel>=0.45.1",
    # 常规开发工具（可根据你需要继续添加）
    "pytest",
    "pytest-asyncio",
    "httpx", # 测试请求常用
    "black",
    "ruff",
    "mypy",
    "types-redis",
    "types-pytz",
    "pandas-stubs>=2.3.3.251201",
]

# CI 构建相关工具（可选，按需添加）
build = [
    "build", # python -m build
    "twine", # 上传包（如果你发包）
]

[build-system]
requires = [
    "setuptools>=79.0.1",
    "wheel>=0.45.1",
]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false
default-groups = []

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
python-downloads = false

[tool.ruff]
# 1. 核心设置
# 设置最大行长（Black 默认 88，也有人喜欢 100 或 120）
line-length = 120
# 目标 Python 版本（根据你的项目调整，如 py39, py310, py311）
target-version = "py312"

# 排除不需要检查的目录
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
# 2. 启用哪些规则？(这是 Ruff 的灵魂)
# E: pycodestyle (错误)
# W: pycodestyle (警告)
# F: Pyflakes (核心逻辑错误)
# I: isort (导入排序)
# B: flake8-bugbear (发现潜在 Bug)
# UP: pyupgrade (自动将旧语法升级为新语法，如 optional 类型)
# N: pep8-naming (变量命名规范)
select = ["E", "W", "F", "I", "B", "UP", "N"]

# 忽略某些过于严格的规则
# E501: 行太长（通常由 formatter 处理，linter 不需要报错）
ignore = ["E501"]

# 允许自动修复的规则（默认是所有，但你可以限制）
fixable = ["ALL"]

[tool.ruff.format]
# 3. 格式化风格 (替代 Black)
# 使用双引号 (Black 默认风格)
quote-style = "double"
# 使用空格缩进
indent-style = "space"
# 魔法尾随逗号 (让多行列表更整洁)
skip-magic-trailing-comma = true
# 行尾符
line-ending = "auto"

[tool.ruff.lint.isort]
# 4. 导入排序设置
# 强制将 import 分组（比如标准库、第三方库、本地库分开）
combine-as-imports = true
